[gd_scene load_steps=16 format=3 uid="uid://ca7xo151vkhx8"]

[ext_resource type="Script" path="res://chest.gd" id="1_nyvm3"]
[ext_resource type="PackedScene" uid="uid://d3sxfjl4xt6jg" path="res://models/Pauza/Chest/Chest.fbx" id="1_t4agt"]
[ext_resource type="PackedScene" uid="uid://b5lw4ixeu4djw" path="res://models/Pauza/Chest/Top.fbx" id="2_3vfi2"]
[ext_resource type="Script" path="res://password_number.gd" id="3_sp1rp"]
[ext_resource type="EventAsset" uid="uid://clf7x778j2mmn" path="res://addons/FMOD/editor/resources/events/{e509db4e-0462-4c91-88c1-c922e5ac8702}.tres" id="5_t0jjs"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ar3kx"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_kaqv3"]
material = SubResource("StandardMaterial3D_ar3kx")
size = Vector2(0.7, 0.9)

[sub_resource type="PlaneMesh" id="PlaneMesh_dyibb"]
material = SubResource("StandardMaterial3D_ar3kx")
size = Vector2(0.6, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_po8cp"]
material = SubResource("StandardMaterial3D_ar3kx")
size = Vector2(0.1, 1.15)

[sub_resource type="BoxShape3D" id="BoxShape3D_xhaxs"]
size = Vector3(1, 0.0793457, 0.720337)

[sub_resource type="BoxShape3D" id="BoxShape3D_rrdbv"]
size = Vector3(0.102539, 0.518311, 0.695312)

[sub_resource type="BoxShape3D" id="BoxShape3D_iv02a"]
size = Vector3(0.947083, 0.518311, 0.110107)

[sub_resource type="BoxShape3D" id="BoxShape3D_y30hy"]
size = Vector3(0.078772, 0.0990857, 0.03)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_71j27"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_oq7m2"]
material = SubResource("StandardMaterial3D_71j27")
size = Vector3(0.08, 0.1, 0.02)

[node name="Chest" type="Node3D"]
script = ExtResource("1_nyvm3")
password = [2, 1, 3]

[node name="Lid" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.517522, -0.333802)

[node name="Top" parent="Lid" instance=ExtResource("2_3vfi2")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0.333802)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Lid/Top"]
transform = Transform3D(1, -8.74228e-08, -8.74228e-08, -8.74228e-08, -1, -8.74228e-08, -8.74228e-08, 8.74228e-08, -1, 0, 0, 0)
mesh = SubResource("PlaneMesh_kaqv3")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Lid/Top"]
transform = Transform3D(1, -8.74228e-08, -8.74228e-08, -8.74228e-08, -1, -8.74228e-08, -8.74228e-08, 8.74228e-08, -1, 0, 0, 0)
mesh = SubResource("PlaneMesh_dyibb")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Lid/Top"]
transform = Transform3D(0.842048, -1.27675e-07, 0.539403, -8.05185e-08, -1, -1.11001e-07, 0.539403, 5.00361e-08, -0.842048, 0, 0, 0)
mesh = SubResource("PlaneMesh_po8cp")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Lid/Top"]
transform = Transform3D(0.840008, -3.2996e-08, -0.542574, -8.04293e-08, -1, -6.37061e-08, -0.542574, 9.71525e-08, -0.840008, 0, 0, 0)
mesh = SubResource("PlaneMesh_po8cp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Lid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0284424, 0.33075)
shape = SubResource("BoxShape3D_xhaxs")

[node name="Body" type="Node3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="Body"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.468744, 0.240845, 0.015625)
shape = SubResource("BoxShape3D_rrdbv")

[node name="StaticBody3D3" type="StaticBody3D" parent="Body"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/StaticBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0134948, 0.240845, 0.321411)
shape = SubResource("BoxShape3D_iv02a")

[node name="StaticBody3D4" type="StaticBody3D" parent="Body"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/StaticBody3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0134948, 0.240845, -0.30832)
shape = SubResource("BoxShape3D_iv02a")

[node name="StaticBody3D2" type="StaticBody3D" parent="Body"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.44873, 0.240845, 0.015625)
shape = SubResource("BoxShape3D_rrdbv")

[node name="Chest" parent="Body" instance=ExtResource("1_t4agt")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Password" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.408, 0.366)

[node name="Key1" type="Area3D" parent="Password"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, 0, 0)
script = ExtResource("3_sp1rp")
chest_key_select = ExtResource("5_t0jjs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Password/Key1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00175171, 0.000419319, 0)
shape = SubResource("BoxShape3D_y30hy")

[node name="Model" type="MeshInstance3D" parent="Password/Key1"]
mesh = SubResource("BoxMesh_oq7m2")
skeleton = NodePath("")

[node name="Number" type="Label3D" parent="Password/Key1/Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.011)
pixel_size = 0.002
text = "0
"
uppercase = true

[node name="Key2" type="Area3D" parent="Password"]
script = ExtResource("3_sp1rp")
chest_key_select = ExtResource("5_t0jjs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Password/Key2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00175171, 0.000419319, 0)
shape = SubResource("BoxShape3D_y30hy")

[node name="Model" type="MeshInstance3D" parent="Password/Key2"]
mesh = SubResource("BoxMesh_oq7m2")
skeleton = NodePath("")

[node name="Number" type="Label3D" parent="Password/Key2/Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.011)
pixel_size = 0.002
text = "0
"
uppercase = true

[node name="Key3" type="Area3D" parent="Password"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.08, 0, 0)
script = ExtResource("3_sp1rp")
chest_key_select = ExtResource("5_t0jjs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Password/Key3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00175171, 0.000419319, 0)
shape = SubResource("BoxShape3D_y30hy")

[node name="Model" type="MeshInstance3D" parent="Password/Key3"]
mesh = SubResource("BoxMesh_oq7m2")
skeleton = NodePath("")

[node name="Number" type="Label3D" parent="Password/Key3/Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.011)
pixel_size = 0.002
text = "0
"
uppercase = true
